<resources>
    <plurals name="pluginInstaller_indexingStatus">
        <item quantity="one">One plugin file found</item>
        <item quantity="other">%d plugin files found</item>
    </plurals>
    <string name="app_name" translatable="false">friday</string>
    <string name="leave_app">Do you really want to leave the app?</string>
    <string name="action_leave">Leave</string>
    <string name="nav_main_profile">Profile</string>
    <string name="nav_main_history">Usage history</string>
    <string name="nav_project_title" translatable="false">Raspberry PI Android Client</string>
    <string name="main_nav_dashboard">Dashboard</string>
    <string name="friday_use_help">To use firday, you have to put this phone into the provided case.</string>
    <string name="nav_history_short">history</string>
    <string name="title_activity_fullscreen_action">AR Mode</string>
    <string name="app_back">Back</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dismiss_btn_seconds">I understood and agree (%d)</string>
    <string name="dismiss_btn">I understood and agree</string>
    <string name="string_time" translatable="false">%s:%s</string>
    <string name="string_time_seconds" translatable="false">%d:%d:%d</string>
    <string name="string_time_expanded" translatable="false">%s, %s:%s</string>
    <string name="string_date_default" translatable="false">%s.%s.%d</string>
    <string name="dialog_warn_title">Please read carefully</string>
    <string name="tou_content">
        Never you use Friday in an environment, where the usage of it causes lack of concentration which may lead into mistakes or any other kind dangerous situations.\n\n

        friday does not take responsibility for mistakes or any other kind of human failure caused by the use of this product.\n\n

        By using this product you agree that this app may contains wrong information when getting information from our app, widgets etc. We are not responsible for information passed by third-party widgets, or widgets which use third-party sources, such as maps or news.\n\n

        We don\'t collect personal data or data from your phone, except in these cases:\n
            \t<b>- Bug-reporting</b>: To constantly improve the quality of our service, we will collect data about your app-usage(Which 	  features you use, android version, device name,app version[, the feature which caused the app to crash])
              You can turn off bug-reporting in the app-settings\n

            \t<b>- Smart features</b>: The user agreed to the use contacts, location service, camera, microphone, notifications\n\n\n

        By clicking <i>\"i understood and agree\"</i> you agree that you read the terms of using(above) our privacy policy and accept these.
    </string>
    <string name="app_settings">Settings</string>
    <string name="app_feedback">Feedback</string>
    <string name="signin_choice">or use</string>
    <string name="mail_invalid_error">The given mail address is not valid.</string>
    <string name="warning_decline">Decline</string>
    <string name="signin_welcome">Welcome back, %s</string>
    <string name="internal_error_title">Internal error</string>
    <string name="internal_error_message">There was an internal error while processing your request.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_display_name">Username</string>
    <string name="pref_header_data_sync">Account and sync</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New version</string>
    <string name="switch_feedback_info">Add additional info</string>
    <string name="sign_out">Sign out</string>
    <string name="more_sync_settings">Synchronization</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_signout_title">Sign out</string>
    <string name="confirm_signout_message">Do you really want to sign out?</string>
    <string name="sign_out_success">Successfully signed out.</string>
    <string name="confirm_deletion_title">Confirm deletion</string>
    <string name="confirm_deletion_message">By deleting your account you agree that all data which is part of this account will be deleted forever.</string>
    <string name="confirm_deletion_positive">Confirm and delete \"%s\"</string>
    <string name="loading_dialog_msg">Loading…</string>
    <string name="deletion_success">Account deleted</string>
    <string name="deletion_error_canceled_title">Deletion was canceled</string>
    <string name="deletion_error_canceled_message">The deletion process was canceled. This error may occurs because the internet connection is unstable or not existent</string>
    <string name="deletion_error_unknown_title">Could not delete account</string>
    <string name="warning_auto_account_creation">If no account is existent, we wil automatically create a new one.</string>
    <string name="delete_dialog_loading_text">Deleting Account…</string>
    <string name="pref_header_info">Info</string>
    <string name="info_phrase_love" translatable="false">© 2018 Stark Industries</string>
    <string name="made_by" translatable="false"><b>by \nLukas Konstantin Faber \nLukas Eric Schulz</b></string>
    <string name="checking_version">Checking…</string>
    <string name="feature_soon">This feature is non-existent in the current version</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="page_profile_header_text">Hello, %s</string>
    <string name="version_text">Version %s</string>
    <string name="info_up_to_date">Up to date</string>
    <string name="info_update_to">Update to %s</string>
    <string name="check_update_error">Could not check for update</string>
    <string name="note_not_signed_in">You are not signed in.</string>
    <string name="new_file_attached">Attached file %s</string>
    <string name="changed_attached_file">Attached file changed to %s</string>
    <string name="smth_went_wrong">Something went wrong :(</string>
    <string name="feedback_submit_success">Submitted feedack successfully. Thank you!</string>
    <string name="feedback_submit_image_upload">Uploading attached images…</string>
    <string name="textwidget_exmple" translatable="false">This is an example of the TextWidget.</string>
    <string name="feedback_submit_logfiles_upload">Uploading LogFiles…</string>
    <string name="debug_check_device_info">Device info</string>
    <string name="debug_usage_data">Usage data</string>
    <string name="header_usage_data_info">What usage data we can collect:</string>
    <string name="usage_data_feature_usage_data">Usage data of features we consider causing crashes of the friday app</string>
    <string name="usage_data_usage_time">App usage time and average usage time of certain features</string>
    <string name="usage_data_ar_feature">Usage time and way of the AR-feature</string>
    <string name="usage_data_necesssarity">We only collect usage data we consider to be helpful in the development and improvement of this app. All collected data will be deleted after it has been reviewed by our support.</string>
    <string name="header_device_data_info">We collect following metadata about your device:</string>
    <string name="device_data_info_device">The name of your device</string>
    <string name="device_data_info_model">The device model name</string>
    <string name="device_data_info_brand">The brand of your device</string>
    <string name="device_data_info_sdkversion">The Android SDK Version of your device</string>
    <string name="device_data_info_android_version">The android version your device is running on</string>
    <string name="device_data_info_manufacturer">The manufacturer of your device</string>
    <string name="simple_action_error_title">An error has occurred :(</string>
    <string name="simple_action_error_message">We don\'t know what happened.</string>
    <string name="error_network_missing_info">Please check if you entered an email address and if you are connected to a network</string>
    <string name="retry">Retry</string>
    <string name="network_error_title">Network error</string>
    <string name="attach_file">Attach file</string>
    <string name="placeholder_add_debug_body">Add more additional debug infos</string>
    <string name="header_how_to_use">How to use friday?</string>
    <string name="app_welcome">Welcome to friday</string>
    <string name="app_friday_description">friday is powerful. We turn your phone into a competent HeadUp Display Client, which is compatible with our high-qualtiy AR-glasses.
        Use \"Widgets\" to convert friday into an assistant - display every info you need from simple text to google calendar events without even touching your device.

    </string>
    <string name="app_language">Language</string>
    <string name="changelog">Changelog</string>
    <string name="network_error_title_short">No connection</string>
    <string name="version_update">Update %s</string>
    <string name="missing_inputs">You either need to allow the collection of device usage data or specify your feedback in the feedback body.</string>
    <string name="uninstall_old_title">Uninstall older version</string>
    <string name="uninstall_old_body">You can\'t use this version of friday with an older version installed at the same time. \n \n <b>You only have to do this once.</b></string>
    <string name="friday_groups">Groups</string>
    <string name="help">Help</string>
    <string name="design">Design</string>
    <string name="theme_dialog_title">Select theme</string>
    <string name="auto_sync">Synchronize with cloud</string>
    <string name="theme">Theme</string>
    <string name="select_theme">Select Theme</string>
    <string name="notification_channel_update_description">This channel is used to notify about new Updates.</string>
    <string name="app_update_title">friday Update</string>
    <string name="app_update_description">friday is ready to update to %s !</string>
    <string name="store_flag_widget">flag</string>
    <string name="store_add_wishlist">Add to list</string>
    <string name="store_download">Download</string>
    <string name="store_detail_review_header">Reviews</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="request_permissions">Request permissions</string>
    <string name="grant_permission">Grant</string>
    <string name="req_cam_retionale_title">Camera</string>
    <string name="req_cam_rationale">The camera permission is needed to use fridays main feature: The AR-mode</string>
    <string name="req_mic_rationale_title">Microphone</string>
    <string name="req_mic_rationale">The mircophone is needed to be able to use the voice assistant.</string>
    <string name="permissions_required">These permissions are required to use this app.</string>
    <string name="auto_check_update">Automatically check for updates</string>
    <string name="manager_transactions">Transactions</string>
    <string name="manager_subscriptions">Subscriptions</string>
    <string name="manager_wishlist">Wishlist</string>
    <string name="store_title_installed_plugins">Installed</string>
    <string name="emptyview_nothing_here">Nothing here.</string>
    <string name="emptyview_go_to_store">Visit the store and download some plugins!</string>
    <string name="unsupported_device_header">We\'re sorry!</string>
    <string name="unsupported_device_tablet_subheader">Friday does not support tablets.</string>
    <string name="unsupported_device_tablet_description">But you can still get Friday on any Android device with Android 8.0 or higher!</string>
</resources>