<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory
        android:title="User">

        <com.code_design_camp.client.friday.HeadDisplayClient.preference.AccountPreference
            android:key="account_main_preference"
            android:layout="@layout/account_preference_layout" />
        <androidx.preference.Preference
            android:key="pref_sign_out"
            android:title="@string/sign_out" />
        <androidx.preference.Preference
            android:key="delete_account"
            android:title="@string/delete_account" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/more_sync_settings">
        <androidx.preference.SwitchPreference
            android:key="sync_account_auto"
            android:title="@string/auto_sync" />
        <androidx.preference.CheckBoxPreference
            android:key="check_update_auto"
            android:title="@string/auto_check_update" />
        <androidx.preference.Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory>
        <com.code_design_camp.client.friday.HeadDisplayClient.preference.ThemeSelectPreference
            android:key="dialog_theme_pref"
            android:title="@string/design" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
