<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        style="@android:style/TextAppearance.Material.Subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/header_usage_data_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp">

        <TextView
            style="@style/TextListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usage_data_feature_usage_data" />

        <TextView
            style="@style/TextListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usage_data_usage_time" />

        <TextView
            style="@style/TextListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usage_data_ar_feature" />
    </LinearLayout>

    <TextView
        style="@android:style/TextAppearance.Material.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/usage_data_necesssarity" />

</LinearLayout>