<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:icon="@drawable/ic_person_black_24dp"
        android:title="User">

        <com.code_design_camp.client.friday.HeadDisplayClient.preference.AccountPreference
            android:key="account_main_preference"
            android:layout="@layout/account_preference_layout" />
        <Preference
            android:key="pref_sign_out"
            android:title="@string/sign_out" />
        <Preference
            android:key="delete_account"
            android:title="@string/delete_account" />
    </PreferenceCategory>
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <PreferenceCategory android:title="@string/more_sync_settings">

        <Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
