<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:tint="@color/highlight_orange"
        app:srcCompat="@drawable/emoticon_sad_outline" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:gravity="center"
        android:padding="32dp"
        android:text="@string/unsupported_device_header"
        android:textAppearance="@style/AppIntroPageTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="32dp"
        android:text="@string/unsupported_device_tablet_subheader"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="#000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingHorizontal="32dp"
        android:text="@string/unsupported_device_tablet_description" />
</LinearLayout>