<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.wizard.AcceptTerms">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/terms_of_use"
        android:textAppearance="@style/AppIntroPageTitle" />

    <ScrollView
        android:id="@+id/tou_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tou_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tou_content" />
    </ScrollView>

    <CheckBox
        android:id="@+id/check_accept_tou"
        style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_use"
        android:textColor="@android:color/white" />

    <CheckBox
        android:id="@+id/check_accept_pp"
        style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textColor="@android:color/white" />

</LinearLayout>